--- a/src/components/search-box/SearchBox.module.css
+++ b/src/components/search-box/SearchBox.module.css
@@ -1,3 +1,29 @@
-.SearchInput {
-  color: red;
+.searchBox{
+  padding-top: 30vh;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 100%;
+  max-width: 450px;
+}
+
+.buttonSubmit{
+  background-color: #fff;
+  height: 45px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 1.5em;
+}
+
+.searchInput {
+  color: #fff;
+  font-size: 2em;
+  height: 50px;
+  background: none;
+}
+
+.resetBorder{
+  outline: none !important;
+  border: 0px;
+  border-bottom: 2px solid #fff;
 }
