Fix: style for mobile.

--- a/src/components/search-box/SearchBox.module.css
+++ b/src/components/search-box/SearchBox.module.css
@@ -1,4 +1,4 @@
-.searchBox{
+.searchBox {
   padding-top: 30vh;
   display: flex;
   flex-direction: row;
@@ -7,23 +7,40 @@
   max-width: 450px;
 }
 
-.buttonSubmit{
-  background-color: #fff;
-  height: 45px;
-  cursor: pointer;
-  width: 100%;
-  font-size: 1.5em;
-}
-
 .searchInput {
   color: #fff;
   font-size: 2em;
   height: 50px;
+  width: 80%;
   background: none;
 }
 
-.resetBorder{
+.buttonSubmit {
+  background-color: #fff;
+  height: 54px;
+  cursor: pointer;
+  width: 20%;
+  font-size: 1.5em;
+}
+
+.resetBorder {
   outline: none !important;
   border: 0px;
   border-bottom: 2px solid #fff;
+}
+
+@media only screen and (max-width: 500px) {
+  .searchBox {
+    max-width: 90vw;
+  }
+
+  .searchInput {
+    width: 70%;
+    font-size: 1.5em;
+  }
+
+  .buttonSubmit {
+    width: 30%;
+    font-size: 1.2em;
+  }
 }
